Bug 487587 - In mathml formulas, the content of many <mo> elements is not highlighted when selected. r=roc